--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "node_api_boilerplate",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "type": "module",
+  "main": "index.ts",
   "scripts": {
     "build": "tsc --project ./",
+    "start": "ENVIRONMENT=production ts-node ./src/index.ts",
+    "dev": "ENVIRONMENT=dev ts-node-dev ./src/index.ts",
     "test": "jest"
   },
   "keywords": [],
