--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "sourceMap": true,
+    "outDir": "build",
     // "skipLibCheck": true
   }
 }
