--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build": "tsc --project ./",
     "start": "ENVIRONMENT=production ts-node ./src/index.ts",
     "dev": "ENVIRONMENT=dev ts-node-dev ./src/index.ts",
+    "lint": "./node_modules/.bin/eslint src/**/*.ts",
+    "lint:fix": "./node_modules/.bin/eslint src/**/*.ts --fix",
     "test": "jest"
   },
   "keywords": [],
@@ -15,13 +17,21 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@typescript-eslint/eslint-plugin": "^5.30.5",
+    "@typescript-eslint/parser": "^5.30.5",
     "eslint": "^8.19.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-plugin-jest": "^26.5.3",
+    "eslint-plugin-jsdoc": "^39.3.3",
+    "eslint-plugin-no-null": "^1.0.2",
+    "eslint-plugin-unicorn": "^43.0.1",
+    "jest": "^28.1.2",
     "ts-node": "^10.8.2",
     "ts-node-dev": "^2.0.0"
   },
   "dependencies": {
     "axios": "^0.27.2",
-    "typescript": "^4.7.4",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "typescript": "^4.7.4"
   }
 }
