Updated packages + Fixed dev env

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,12 @@
     "strict": true,
     "sourceMap": true,
     "outDir": "build",
-    // "skipLibCheck": true
+    "baseUrl": "src",
+    "paths": {
+      "controllers/*": ["controllers/*"],
+      "services/*": ["services/*"],
+      "clients/*": ["clients/*"],
+      "utils/*": ["utils/*"]
+    }
   }
 }
