--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "node_api_boilerplate",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
   "main": "index.ts",
   "scripts": {
     "build": "tsc --project ./",
     "start": "ENVIRONMENT=production ts-node ./src/index.ts",
-    "dev": "ENVIRONMENT=dev ts-node-dev ./src/index.ts",
+    "dev": "nodemon --exec ts-node ./src/index.ts",
     "lint": "./node_modules/.bin/eslint src/**/*.ts",
     "lint:fix": "./node_modules/.bin/eslint src/**/*.ts --fix",
     "test": "jest"
@@ -17,6 +16,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^29.5.1",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
     "eslint": "^8.19.0",
@@ -25,9 +26,12 @@
     "eslint-plugin-jsdoc": "^39.3.3",
     "eslint-plugin-no-null": "^1.0.2",
     "eslint-plugin-unicorn": "^43.0.1",
-    "jest": "^28.1.2",
-    "ts-node": "^10.8.2",
-    "ts-node-dev": "^2.0.0"
+    "jest": "^29.0.0",
+    "nodemon": "^2.0.22",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths-jest": "^0.0.1"
   },
   "dependencies": {
     "axios": "^0.27.2",
